--- a/spa/src/PageTemplate/templates/page-template/homepage.phtml
+++ b/spa/src/PageTemplate/templates/page-template/homepage.phtml
@@ -1,4 +1,4 @@
-<div class="container"><?php var_dump($area);die();?>
+<div class="container">
     <div class="content-header" data-area-identifier="area-content_header">
         <?=$this->partial('content/area', array(
             'area' => $area['content_header'],
