--- a/spa/public/assets/css/theme-art13-1.css
+++ b/spa/public/assets/css/theme-art13-1.css
@@ -14,13 +14,13 @@ body.app-theme-default.action-register {
     background-repeat: no-repeat;
     background-position: left top;
     background-attachment: fixed;
-    padding-top:120px;
+    padding-top:80px;
 
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 }
 .action-login .navbar-light,
 .action-register .navbar-light {
-    height:120px;
+    height:80px;
 }
 .action-login .navbar-light,
 .action-register .navbar-light {
@@ -38,8 +38,8 @@ body.app-theme-art13 div[role="main"] .app-container-content,
     margin-top: 10px;
     margin-bottom: 50px;
     background-color: rgba(255,255,255,.9);
-    border-radius: 0px;
-    border: 2px solid #ffffff;
+    /*border-radius: 0px;*/
+    border: 1px solid #ffffff;
     -webkit-box-shadow: inset 0px 0px 20px 10px rgba(0,0,0,0.08);
     -moz-box-shadow: inset 0px 0px 20px 10px rgba(0,0,0,0.08);
     box-shadow: inset 0px 0px 20px 10px rgba(0,0,0,0.08);
