--- a/spa/src/App/templates/layout/manager.phtml
+++ b/spa/src/App/templates/layout/manager.phtml
@@ -62,30 +62,13 @@ endif;
                             <a href="<?=$this->url('home')?>" class="nav-link"><?=$this->translate("Homepage");?></a>
                         </li>
                         <?php if( ! $this->hasIdentity()):?>
-                            <li class="nav-item float-right">
-                                <a href="<?=$this->url('spa.auth')?>" class="nav-link"><?=$this->translate('Events');?></a>
-                            </li>
+
                         <?php else: ?>
-                            <li class="nav-item">
-                                <a href="<?=$this->url('spa.user.list')?>" class="nav-link">
-                                    Uzytkownicy
-                                </a>
+                            <li class="nav-item float-right">
+                                <a href="<?=$this->url('manager.event.list')?>" class="nav-link"><?=$this->translate('Events');?></a>
                             </li>
                             <li class="nav-item">
-                                <a href="<?=$this->url('spa.user.list')?>" class="nav-link">
-                                    Protesty
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="<?=$this->url('spa.spa-petition.list')?>" class="nav-link">
-                                    Petycje
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="<?=$this->url('admin.site.list')?>" class="nav-link"><?=$this->translate('Witryny');?></a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="<?=$this->url('admin.page.list')?>" class="nav-link"><?=$this->translate('Strony');?></a>
+                                <a href="<?=$this->url('spa.spa-petition.list')?>" class="nav-link"><?=$this->translate("Petitions");?></a>
                             </li>
                         <?php endif;?>
                     </ul>
