--- a/spa/src/App/templates/layout/art13-1.phtml
+++ b/spa/src/App/templates/layout/art13-1.phtml
@@ -92,7 +92,42 @@ endif;
             <div class="row">
                 <div class="col-12 m-auto" role="main">
                     <?=($this->content);?>
-                    <?=$_SERVER['HTTP_ACCEPT_LANGUAGE'];?>
+                    <?php
+if (isset($_SERVER['HTTP_ACCEPT_LANGUAGE'])) {
+            // break up string into pieces (languages and q factors)
+            preg_match_all(
+                '/([a-z]{1,8}(-[a-z]{1,8})?)\s*(;\s*q\s*=\s*(1|0\.[0-9]+))?/i',
+                $_SERVER['HTTP_ACCEPT_LANGUAGE'],
+                $lang_parse
+            );
+
+            if (count($lang_parse[1])) {
+                // create a list like 'en' => 0.8
+                $langs = array_combine($lang_parse[1], $lang_parse[4]);
+
+                // set default to 1 for any without q factor
+                foreach ($langs as $lang => $val) {
+                    if ($val === '') {
+                        $langs[$lang] = 1;
+                    }
+                }
+                // sort list based on value
+                arsort($langs, SORT_NUMERIC);
+            }
+        }
+        //extract most important (first)
+        reset($langs);
+        $lang = key($langs);
+
+        //if complex language simplify it
+        if (stristr($lang, '-')) {
+            list($lang) = explode('-', $lang);
+        }
+
+        echo $lang . "_" . $lang;
+
+?>
+                    ?>
                 </div>
             </div>
         </main>
