[WIP] some tranlsations

--- a/spa/src/App/templates/layout/default.phtml
+++ b/spa/src/App/templates/layout/default.phtml
@@ -78,7 +78,7 @@ endif;
                                 <a href="<?=$this->url('manager.event.list')?>" class="nav-link"><?=$this->translate("Events");?></a>
                             </li>
                             <li class="nav-item">
-                                <a href="<?=$this->url('spa.spa-petition.list')?>" class="nav-link"><?=$this->translate("Petycje");?></a>
+                                <a href="<?=$this->url('spa.spa-petition.list')?>" class="nav-link"><?=$this->translate("Petitions");?></a>
                             </li>
                         <?php endif;?>
                     </ul>
