[WIP] some tranlsations

--- a/spa/src/App/templates/layout/manager.phtml
+++ b/spa/src/App/templates/layout/manager.phtml
@@ -52,7 +52,7 @@ endif;
                     </button>
                     <!-- Brand -->
                     <a class="navbar-brand" href="<?=$this->url('home')?>">
-                        <img src="/assets/img/1113.png" alt="Zend Expressive" height="28" />
+                        <img src="/assets/img/1113.png" alt="art11.eu" height="28" />
                     </a>
                 </div>
                 <!-- Links -->
