--- a/spa/src/App/templates/layout/art13-1.phtml
+++ b/spa/src/App/templates/layout/art13-1.phtml
@@ -42,6 +42,29 @@ endif;
     </style>
 </head>
 <body class="app app-theme-art13 <?=(isset($bodyClass))?$bodyClass:null;?>">
+
+    <script>
+        window.fbAsyncInit = function() {
+            FB.init({
+                appId      : '2199972683623007',
+                cookie     : true,
+                xfbml      : true,
+                version    : '{api-version}'
+            });
+
+            FB.AppEvents.logPageView();
+
+        };
+
+        (function(d, s, id){
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) {return;}
+            js = d.createElement(s); js.id = id;
+            js.src = "https://connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
+
     <header class="app-header">
         <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top" role="navigation">
             <div class="container">
