--- a/spa/public/assets/css/theme-art13-1.css
+++ b/spa/public/assets/css/theme-art13-1.css
@@ -1,3 +1,46 @@
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+}
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    line-height: 60px; /* Vertically center the text there */
+    background-color: #212121;
+}
+
+
+/* Custom page CSS
+-------------------------------------------------- */
+/* Not required for template or sticky footer method. */
+
+body > .container {
+    padding: 60px 15px 0;
+}
+
+.footer > .container {
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+code {
+    font-size: 80%;
+}
+
+
+
+
+/* ART13 */
+
 body {
 
 }
@@ -88,4 +131,8 @@ hr {
 
 .navbar-item .share-button {
     height:20px;
+}
+
+body.app-theme-art13 .list-group-item {
+    background-color:rgba(255,255,255,0.6);
 }
