--- a/spa/src/App/templates/layout/art13-1.phtml
+++ b/spa/src/App/templates/layout/art13-1.phtml
@@ -38,7 +38,7 @@ endif;
     <meta property="og:image:secure_url" content="https://art13.eu/assets/img/1113.png" />
 
     <link rel="shortcut icon" href="https://framework.zend.com/ico/favicon.ico" />
-    <?=$this->headTitle('11/13')->setSeparator(' - ')->setAutoEscape(false)?>
+    <?=$this->headTitle('Art 11/13')->setSeparator(' - ')->setAutoEscape(false)?>
     <?=$this->headMeta()?>
     <?=$this->headLink()?>
     <style>
@@ -114,19 +114,12 @@ endif;
                             <p class="mt-3 mr-3"><?=$this->translate('Protests starts in ');?></p>
                         </li>
                         <li class="nav-item mt-2">
-                            <span class="float-md-right mt-1 mr-5" id="time_counter-first" data-countdown="2018/08/26 19:00"></span>
+                            <span class="float-md-right mt-1 mr-0" id="time_counter-first" data-countdown="2018/08/26 19:00"></span>
                         </li>
 
                     </ul>
                     <ul class="navbar-nav navbar-right align-middle">
-                        <?php if( ! $this->hasIdentity()):?>
-                            <li class="nav-item mr-2">
-                                <a href="<?=$this->url('manager.register')?>" class="nav-link btn btn-sm btn-secondary text-light"><?=$this->translate('Sign Up');?></a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="<?=$this->url('spa.auth')?>" class="nav-link btn btn-sm btn-secondary text-light"><?=$this->translate('Sign In');?></a>
-                            </li>
-                        <?php else: ?>
+                        <?php if( $this->hasIdentity()):?>
                             <li class="nav-item">
                                 <a href="<?=$this->url('spa.auth.logout')?>" class="nav-link btn btn-sm btn-secondary text-light"><?=$this->translate("Sign Out");?></a>
                             </li>
@@ -151,12 +144,18 @@ endif;
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <ul class="list-unstyled text-small mb-0">
+                    <ul class="d-flex justify-content-between list-unstyled text-small mb-0">
+                        <li class="d-inline mr-4"><a class="text-muted" href="#"><a href="<?=$this->url('home')?>" class="text-muted"><?=$this->translate("Homepage");?></a></a></li>
                         <li class="d-inline mr-4"><a class="text-muted" href="#"><?=$this->translate('About');?></a></li>
                         <li class="d-inline mr-4"><a class="text-muted" href="/privacy-policy"><?=$this->translate('Privacy Policy');?></a></li>
                         <li class="d-inline mr-4"><a class="text-muted" href="#"><?=$this->translate('Terms and Conditions');?></a></li>
                         <li class="d-inline mr-4"><a class="text-muted" href="#"><?=$this->translate('List Petitions');?></a></li>
-                    </ul>
+                        <?php if( ! $this->hasIdentity()):?>
+                            <li class="d-inline mr-4"><a class="text-muted" href="<?=$this->url('manager.register')?>"><?=$this->translate('Sign Up');?></a></li>
+                            <li class="d-inline mr-4"><a class="text-muted" href="<?=$this->url('spa.auth')?>"><?=$this->translate('Sign In');?></a></li>
+                        <?php else: ?>
+                            <li class="d-inline mr-4"><a class="text-muted" href="<?=$this->url('spa.auth.logout')?>"><?=$this->translate("Sign Out");?></a></li>
+                        <?php endif;?>
                 </div>
             </div>
         </div>
