--- a/spa/src/App/templates/layout/default.phtml
+++ b/spa/src/App/templates/layout/default.phtml
@@ -120,12 +120,8 @@ endif;
 
 
 
-    <footer class="app-footer">
+    <footer class="app-footer footer">
         <div class="container">
-            <hr />
-            <p>
-                &copy; 2017 - <?=date('Y')?> by Secalith Ltd. All rights reserved.
-            </p>
         </div>
     </footer>
 
